--- a/virtual-assistant-rasa/rasa-weatherbot/endpoints.yml
+++ b/virtual-assistant-rasa/rasa-weatherbot/endpoints.yml
@@ -18,7 +18,7 @@
 # https://rasa.com/docs/rasa/core/actions/#custom-actions/
 
 action_endpoint:
-   url: "http://20.40.60.80:5055/webhook"
+   url: "http://localhost:5055/webhook"
 # Tracker store which is used to store the conversations.
 # By default the conversations are stored in memory.
 # https://rasa.com/docs/rasa/api/tracker-stores/
