--- a/virtual-assistant-rasa/requirements_client-python36.txt
+++ b/virtual-assistant-rasa/requirements_client-python36.txt
@@ -1,7 +1,7 @@
-Flask==2.1.2
+Flask==0.11.1
 Flask-Cors==3.0.10
 Flask-SocketIO==4.2.1
-werkzeug==2.0.3
+werkzeug<1.0
 inflect==3.0.2
 numpy==1.17.4
 python-engineio==3.11.1
